<?xml version="1.0"?>
<package>
  <name>rpl_exploration</name>
  <version>0.0.0</version>
  <description>The rpl_exploration package</description>

  <maintainer email="mgse761@student.liu.se">mseln</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>aeplanner</build_depend>
  <build_depend>rrtplanner</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>quadrotor_msgs</build_depend>

  <run_depend>octomap</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>aeplanner</run_depend>
  <run_depend>rrtplanner</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>quadrotor_msgs</run_depend>


  <build_depend>rospy</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>

  <export>
    <nodelet plugin="${prefix}/rpl_exploration_nodelets.xml" />
  </export>
</package>
